--- a/src/component/Icon/CloseIcon/CloseIcon.style.scss
+++ b/src/component/Icon/CloseIcon/CloseIcon.style.scss
@@ -3,13 +3,8 @@
     height: 16px;
 
     &-Close {
-        path {
-            fill: var(--color-white);
-            transition: fill 0.2s;
-        }
-
         &:hover {
-            path {
+            >path {
                 fill: var(--color-theme);
             }
         }
