--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -15,7 +15,7 @@
     --color-neutral-foreground: var(--color-white);
     --color-success-background: rgb(23, 185, 85);
     --color-success-foreground: var(--color-white);
-    --color-warning-background: rgb(212, 201, 46);
+    --color-warning-background: rgb(230, 195, 43);
     --color-warning-foreground: var(--color-black);
     --color-error-background: rgb(212, 46, 46);
     --color-error-foreground: var(--color-white);
@@ -47,4 +47,14 @@ body {
 
 main {
     margin-block-start: var(--header-height);
+}
+
+button {
+    cursor: pointer;
+
+    &:hover {
+        >.Icon>svg>path {
+            fill: var(--color-theme);
+        }
+    }
 }
